crates/pg_syntax/tests/snapshots/postgres_regress/int4@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO INT4_TBL(f1) VALUES ('1000000000000');"
---
InsertStmt@0..50
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "INT4_TBL"
  Ascii40@20..21 "("
  ResTarget@21..23
    Ident@21..23 "f1"
  Ascii41@23..24 ")"
  Whitespace@24..25 " "
  SelectStmt@25..48
    Values@25..31 "VALUES"
    Whitespace@31..32 " "
    Ascii40@32..33 "("
    List@33..48
      AConst@33..48
        Sconst@33..48 "'1000000000000'"
  Ascii41@48..49 ")"
  Ascii59@49..50 ";"

