crates/pg_syntax/tests/snapshots/postgres_regress/int4@39.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT 4-2 AS two;
---
SelectStmt@0..18
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..17
    AExpr@7..10
      AConst@7..8
        Iconst@7..8 "4"
      Ascii45@8..9 "-"
      AConst@9..10
        Iconst@9..10 "2"
    Whitespace@10..11 " "
    As@11..13 "AS"
    Whitespace@13..14 " "
    Ident@14..17 "two"
  Ascii59@17..18 ";"

