crates/pg_syntax/tests/snapshots/postgres_regress/int4@46.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 AS ten;
---
SelectStmt@0..52
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..51
    AExpr@7..44
      AExpr@7..40
        AExpr@7..36
          AExpr@7..32
            AExpr@7..28
              AExpr@7..24
                AExpr@7..20
                  AExpr@7..16
                    AExpr@7..12
                      AConst@7..8
                        Iconst@7..8 "1"
                      Whitespace@8..9 " "
                      Ascii43@9..10 "+"
                      Whitespace@10..11 " "
                      AConst@11..12
                        Iconst@11..12 "1"
                    Whitespace@12..13 " "
                    Ascii43@13..14 "+"
                    Whitespace@14..15 " "
                    AConst@15..16
                      Iconst@15..16 "1"
                  Whitespace@16..17 " "
                  Ascii43@17..18 "+"
                  Whitespace@18..19 " "
                  AConst@19..20
                    Iconst@19..20 "1"
                Whitespace@20..21 " "
                Ascii43@21..22 "+"
                Whitespace@22..23 " "
                AConst@23..24
                  Iconst@23..24 "1"
              Whitespace@24..25 " "
              Ascii43@25..26 "+"
              Whitespace@26..27 " "
              AConst@27..28
                Iconst@27..28 "1"
            Whitespace@28..29 " "
            Ascii43@29..30 "+"
            Whitespace@30..31 " "
            AConst@31..32
              Iconst@31..32 "1"
          Whitespace@32..33 " "
          Ascii43@33..34 "+"
          Whitespace@34..35 " "
          AConst@35..36
            Iconst@35..36 "1"
        Whitespace@36..37 " "
        Ascii43@37..38 "+"
        Whitespace@38..39 " "
        AConst@39..40
          Iconst@39..40 "1"
      Whitespace@40..41 " "
      Ascii43@41..42 "+"
      Whitespace@42..43 " "
      AConst@43..44
        Iconst@43..44 "1"
    Whitespace@44..45 " "
    As@45..47 "AS"
    Whitespace@47..48 " "
    Ident@48..51 "ten"
  Ascii59@51..52 ";"

