crates/pg_syntax/tests/snapshots/postgres_regress/int4@48.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT (2 + 2) / 2 AS two;
---
SelectStmt@0..26
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..25
    Ascii40@7..8 "("
    AExpr@8..18
      AExpr@8..13
        AConst@8..9
          Iconst@8..9 "2"
        Whitespace@9..10 " "
        Ascii43@10..11 "+"
        Whitespace@11..12 " "
        AConst@12..13
          Iconst@12..13 "2"
      Ascii41@13..14 ")"
      Whitespace@14..15 " "
      Ascii47@15..16 "/"
      Whitespace@16..17 " "
      AConst@17..18
        Iconst@17..18 "2"
    Whitespace@18..19 " "
    As@19..21 "AS"
    Whitespace@21..22 " "
    Ident@22..25 "two"
  Ascii59@25..26 ";"

